<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="location">Location</string>
    <string name="country">Country:</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>
    <string name="weather">Weather</string>
    <string name="app_name">HomeworkFinal</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_details">Details</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="sex">Sex</string>
    <string name="varsta">Varsta</string>
    <string name="male">Masculin</string>
    <string name="female">Feminin</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="contentDescription">description</string>
    <string name="tvRegister">Register</string>
    <string name="newEmail">New Email</string>
    <string name="userDistribution">User Distribution</string>
    <string name="histogram">Histogram</string>
    <string name="temp">Temporar</string>
    <string name="facebookProfile">Facebook Profile</string>
    <!-- menu strings -->
    <string name="action_search">Search</string>
    <string name="action_addmovie">Add Movie</string>
    <string name="action_help">Help</string>
    <string name="edit">Edit</string>
    <string name="edit_pass">Edit Password</string>
    <string name="registerNew">Register (all fields must be completed)</string>
    <string name="fbProfile">Facebook Profile</string>
    <string name="saveProfile">Save Changes</string>
    <string name="save">Save</string>
    <string name="new_facebook">New Facebook Profile</string>
    <string name="newPassword">New Password</string>
    <string name="cancel">Cancel</string>

    <string-array name="age_values">
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
    </string-array>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_profile">Profile</string>

</resources>